footer design is changed

--- a/faq.html
+++ b/faq.html
@@ -62,7 +62,7 @@
                         assessment of your
                         current circumstances, including your income and expenses. To make the assessment as
                         straightforward as
-                        possible, we recommend getting together details of your income (i.e. any benefits you receive, a
+                        possible, we recommend getting the details of your income together (i.e. any benefits you receive, a
                         monthly/weekly
                         salary), details of what you owe to which companies, and your regular expenses. For your
                         expenses, you can use
@@ -85,7 +85,7 @@
 
                     <p  class="display-none">If you know who you owe money to, you can contact creditors for up-to-date debt balances. If
                         you're unsure, you
-                        can get a copy of your credit report from one of three credit reference agencies:
+                        can get a copy of your credit report from one of the three credit reference agencies:
                     </p>
                     <ul class="display-none">
                         <li>TransUnion (formerly Call Credit)</li>
@@ -96,7 +96,7 @@
 
                 <div class="qna">
                     <h2 class="bg-gradient-primary-to-secondary p-3 text-white">I'm self employed. Can you help?</h2>
-                    <p  class="display-none">Absolutely, yes we can. <a>book a call</a>.</p>
+                    <p  class="display-none">Absolutely, yes we can. <a href="/#contact">book a call</a>.</p>
                 </div>
 
                 <div class="qna">
@@ -122,7 +122,6 @@
                     <p  class="display-none">A DMP may be a suitable debt solution if you have some surplus money available each month once
                         you've paid your
                         priority costs such as rent or mortgage, food, accommodation and utility bills.</p>
-                    <br class="display-none">
                     <p  class="display-none">We'll work with you to work out a budget that meets your household's needs. Any money left over
                         will go to your
                         creditors.</p>
@@ -133,7 +132,6 @@
                     <p  class="display-none">A debt management plan will almost always affect your credit file and score. This is because you
                         usually pay less
                         than the minimum repayment amount you agreed to when you initially took the debts out.</p>
-                    <br class="display-none">
                     <p  class="display-none">A DMP isn't specifically registered on your credit file but the reduced payments could impact on
                         a few different
                         areas
@@ -143,8 +141,8 @@
                         happened, even if the debt hasn't been fully repaid.</p>
                 </div>
                 <div class="qna">
-                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">What debts can be included on a DMP?</h2>
-                    <p  class="display-none">If you're unable to keep up with payments to most credit facilities, you should be able to
+                    <h2 class="bg-gradient-primary-to-secondary p-3 text-white">What debts can be included on a DMP?</h2>
+                    <p class="display-none">If you're unable to keep up with payments to most credit facilities, you should be able to
                         include these in your
                         DMP.
                         This includes credit cards, loans, overdrafts, catalogue accounts, payday loans and xxx. In some
@@ -154,8 +152,7 @@
                         utility bills,
                         Council
                         Tax or your rent.</p>
-                    <br class="display-none">
-                    <p  class="display-none">If a debt cannot be included in the DMP for any reason (e.g. it's a secured debt), we will
+                    <p class="display-none">If a debt cannot be included in the DMP for any reason (e.g. it's a secured debt), we will
                         include the amount you
                         need
                         to pay to the account in your monthly budget to make sure you can keep up with your payments.
@@ -163,16 +160,15 @@
                 </div>
 
                 <div class="qna">
-                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Is a DMP the same as debt consolidation?</h2>
-                    <p  class="display-none">Debt consolidation involves taking out a loan to repay all unsecured debts you may have. Usually
+                    <h2 class="bg-gradient-primary-to-secondary p-3 text-white">Is a DMP the same as debt consolidation?</h2>
+                    <p class="display-none">Debt consolidation involves taking out a loan to repay all unsecured debts you may have. Usually
                         the loan would
                         be paid
                         back over a longer period than the debts it was taken out to repay, therefore lowering the
                         monthly payments.
                         However,
                         interest is usually charged.</p>
-                    <br class="display-none">
-                    <p  class="display-none">A debt management plan doesn't involve taking further credit. Instead, new payment terms are
+                    <p class="display-none">A debt management plan doesn't involve taking further credit. Instead, new payment terms are
                         agreed with your
                         creditor,
                         based on what you can afford to pay.</p>
@@ -181,54 +177,21 @@
 
             <div>
                 <div class="qna">
-                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Is an IVA suitable for me?</h2>
-                    <p  class="display-none">An individual voluntary arrangement is a type of insolvency and a legally binding arrangement
-                        between you and
-                        your
-                        creditors. It may be a suitable solution if you can afford to pay something to your debts, but
-                        not the full
-                        amount your
-                        creditors want.</p>
-                    <br class="display-none">
-                    <p  class="display-none">If you have a lump sum to pay towards your debts, you may also qualify for an IVA.</p>
-                    <br class="display-none">
-                    <p  class="display-none">An IVA should be carefully considered because of the possible consequences for your personal,
-                        professional and
-                        financial
-                        life. There are several risks that you must consider before applying which is why you should get
-                        expert debt
-                        advice.</p>
+                    <h2 class="bg-gradient-primary-to-secondary p-3 text-white">Is an IVA suitable for me?</h2>
+                    <p class="display-none">An individual voluntary arrangement is a type of insolvency and a legally binding arrangement between you and your creditors. It may be a suitable solution if you can afford to pay something to your debts, but not the full amount your creditors want.</p>
+                    <p class="display-none">If you have a lump sum to pay towards your debts, you may also qualify for an IVA.</p>
+                    <p class="display-none">An IVA should be carefully considered because of the possible consequences for your personal, professional and financial life. There are several risks that you must consider before applying which is why you should get expert debt advice.</p>
                 </div>
 
                 <div class="qna">
-                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Does an IVA affect my credit file?</h2>
-                    <p  class="display-none">IVA's are a type of insolvency and will show on your credit file for six years from the date they
-                        begin. During
-                        this
-                        time, you're likely to find it difficult to obtain credit. You must also inform your insolvency
-                        practitioner
-                        (IP) and
-                        get written permission if you want to take out more than £500 worth of credit during your IVA.
-                        Details of
-                        individual
-                        voluntary arrangements are listed on a public register called the Individual Insolvency
-                        Register. It's unlikely
-                        that
-                        anyone would come across this information, but it's something which is available to those who
-                        know where to look
-                        for it.</p>
+                    <h2 class="bg-gradient-primary-to-secondary p-3 text-white">Does an IVA affect my credit file?</h2>
+                    <p class="display-none">IVA's are a type of insolvency and will show on your credit file for six years from the date they begin. During this time, you're likely to find it difficult to obtain credit. You must also inform your insolvency practitioner (IP) and get written permission if you want to take out more than £500 worth of credit during your IVA. Details of individual voluntary arrangements are listed on a public register called the Individual Insolvency Register. It's unlikely that anyone would come across this information, but it's something which is available to those who know where to look for it.</p>
                 </div>
                 <div class="qna">
-                    <h2  class="bg-gradient-primary-to-secondary p-3 text-white">What costs and fees are involved?</h2>
-                    <p class="display-none">No matter who arranges your IVA there are associated costs and fees. Our Partners IVA costs and
-                        fees follow
-                        industry
-                        standards. All fees are agreed by you and your creditors before an IVA is approved. If at any
-                        time you decide
-                        not to go
-                        ahead with an IVA with us, there will be no fees to pay.
-                    </p><br class="display-none">
-                    <p  class="display-none">
+                    <h2 class="bg-gradient-primary-to-secondary p-3 text-white">What costs and fees are involved?</h2>
+                    <p class="display-none">No matter who arranges your IVA there are associated costs and fees. Our Partners IVA costs and fees follow industry standards. All fees are agreed by you and your creditors before an IVA is approved. If at any time you decidenot to go ahead with an IVA with us, there will be no fees to pay.
+                    </p>
+                    <p class="display-none">
                         Other IVA companies may charge different fees. It's important to check and understand them
                         before going ahead.
                     </p>
@@ -243,45 +206,31 @@
                         <li>Finance and accountancy roles</li>
                         <li>Pub licensees</li>
                     </ul>
-                    <p class="display-none">The best way to find out if an IVA or bankruptcy would impact on your job is to check with your
-                        professional
-                        membership
-                        body or trade union or ask to speak to your HR department confidentially. It's important to
-                        check if your job
-                        will be
-                        affected, but in our experience most jobs are not.</p>
+                    <p class="display-none">The best way to find out if an IVA or bankruptcy would impact on your job is to check with your professional membership body or trade union or ask to speak to your HR department confidentially. It's important to check if your job will be affected, but in our experience most jobs are not.</p>
 
                 </div>
             </div>
             <div>
                 <div class="qna">
                     <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Is a DRO suitable for me?</h2>
-                    <p class="display-none">DROs are specifically designed for people who have a smaller amount of debts and a lower income,
-                        and can be a
-                        cheaper
-                        alternative to bankruptcy. To apply for a DRO, you must:</p>
+                    <p class="display-none">DROs are specifically designed for people who have a smaller amount of debts and a lower income, and can be a cheaper  alternative to bankruptcy. To apply for a DRO, you must:</p>
                     <ul class="display-none">
                         <li>live in England, Wales or Northern Ireland</li>
                         <li>owe less than £20,000</li>
                         <li>have less than £1,000 in assets (and a car worth no more than £1,000)</li>
-                        <li>have less than £50 in surplus income per month after paying your household bills and living
-                            costs</li>
+                        <li>have less than £50 in surplus income per month after paying your household bills and living costs</li>
                     </ul>
                 </div>
 
                 <div class="qna">
                     <h2  class="bg-gradient-primary-to-secondary p-3 text-white">Does a DRO affect my credit file?</h2>
                     <p  class="display-none">
-                        A debt relief order will stay on your credit file for six years from the date it's approved.
-                        This may make it
-                        difficult to take out credit during this time.
+                        A debt relief order will stay on your credit file for six years from the date it's approved. This may make it difficult to take out credit during this time.
                     </p>
                 </div>
                 <div class="qna">
                     <h2  class="bg-gradient-primary-to-secondary p-3 text-white">How does a DRO work?</h2>
-                    <p  class="display-none">A DRO freezes your debt repayments and interest for 12 months. If your financial situation hasn't
-                        changed at the
-                        end of this period, then all the debts included will be written off.</p>
+                    <p  class="display-none">A DRO freezes your debt repayments and interest for 12 months. If your financial situation hasn't changed at the end of this period, then all the debts included will be written off.</p>
                 </div>
                 <div class="qna">
                     <h2  class="bg-gradient-primary-to-secondary p-3 text-white">How much does a DRO cost?</h2>
