--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -70,7 +70,7 @@
                 accept this Privacy Policy. If you do not accept and agree with this Privacy Policy, you must stop using
                 Our Site immediately.</p>
             <ol>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>Definitions and Interpretation</li>
                 </h2>
 
@@ -101,7 +101,7 @@
                     <li>“UK” means the United Kingdom.</li>
                 </ol>
                 <br>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>What Does This Policy Cover?</li>
                 </h2>
 
@@ -113,7 +113,7 @@
                     them.
                     the Policy covers the use of the site and any subsequent contact or service provided by Make Me Debt
                     Free.</p><br>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>Your Rights</li>
                 </h2>
 
@@ -146,7 +146,7 @@
                         or your
                         local Citizens Advice Bureau.</li>
                 </ol><br>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>What Data Do We Collect?</li>
                 </h2>
 
@@ -176,7 +176,7 @@
                         on
                         your computer or device, nor do We use any other means of data collection.</li>
                 </ol><br>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>How Do We Use Your Data?</li>
                 </h2>
                 <ol>
@@ -282,7 +282,7 @@
                         </ol>
                     </ol>
                 </ol><br>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>Legitimate Interest</li>
                 </h2>
                 <ol>
@@ -307,7 +307,7 @@
                     <li> Maintaining a marketing suppression list; and
                     <li> Complying with laws/regulations that apply to us.
                 </ol><br>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>How and Where Do We Store Your Data?</li>
                 </h2>
                 <ol>
@@ -346,7 +346,7 @@
                     <li> Limiting the data transfer to only data that needs to be transferred to achieve the purpose.
                     </li>
                 </ol><br>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>Do We Share Your Data?</li>
                 </h2>
                 <ol>
@@ -463,7 +463,7 @@
                 </ol>
                 <br>
 
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>What Happens If Our Business Changes Hands?</li>
                 </h2>
 
@@ -483,7 +483,7 @@
                         in advance and informed of the changes.</li>
                 </ol>
                 <br>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>How Can You Control Your Data?</li>
                 </h2>
                 <ol>
@@ -507,7 +507,7 @@
                 </ol>
                 <br>
 
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>Your Right to Withhold Information</li>
                 </h2>
                 <ol>
@@ -519,7 +519,7 @@
                     </li>
                 </ol>
                 <br>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>How Can You Access Your Data?</li>
                 </h2>
                 <p>
@@ -531,7 +531,7 @@
                     info@makemedebtfree.co.uk
                     or using the contact details below in section 15.</p>
                 <br>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>Our Use of Cookies</li>
                 </h2>
 
@@ -548,7 +548,7 @@
                 <br>
                 <p>Date last updated: 24/07/2022</p>
                 <br>
-                <h2>
+                <h2 class="display-6 lh-1">
                     <li>Contacting Us</li>
                 </h2>
 
@@ -559,7 +559,7 @@
                     information
                     about the data We hold about you (as under section 13 above).</p>
                 <br>
-                <h2>
+                <h2 class="display-6">
                     <li>Changes to Our Privacy Policy</li>
                 </h2>
 
