--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                         <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/VN20220816_191116(0).mp4" type="video/mp4" /></video>
                                     </div>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -108,32 +108,32 @@
                     <div class="col-md-6 col-lg-3 mb-5">
                         <!-- Feature item-->
                         <div class="text-center">
-                            <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
-                            <h3 class="font-alt">Over the phone advice</h3>
+                            <i class="bi-pencil-square icon-feature text-gradient d-block mb-3"></i>
+                            <h3 class="font-alt">Get started</h3>
                             <p class="text-muted mb-0">You are just a phone call away from the solution of your debts. <br><a href="/#contact" class="nav-link">Book a call now.</a></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5">
                         <!-- Feature item-->
                         <div class="text-center">
-                            <i class="bi-envelope icon-feature text-gradient d-block mb-3"></i>
-                            <h3 class="font-alt">Send docs on email</h3>
+                            <i class="bi-chat-right-text icon-feature text-gradient d-block mb-3"></i>
+                            <h3 class="font-alt">Speak to an expert</h3>
                             <p class="text-muted mb-0">Put an image, video, animation, or anything else in the screen!</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5">
                         <!-- Feature item-->
                         <div class="text-center">
-                            <i class="bi-gift icon-feature text-gradient d-block mb-3"></i>
-                            <h3 class="font-alt">Get tailor made solution</h3>
+                            <i class="bi-check2-square icon-feature text-gradient d-block mb-3"></i>
+                            <h3 class="font-alt">Choose your plan</h3>
                             <p class="text-muted mb-0">As always, this theme is free to download and use for any purpose!</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5">
                         <!-- Feature item-->
                         <div class="text-center">
-                            <i class="bi-patch-check icon-feature text-gradient d-block mb-3"></i>
-                            <h3 class="font-alt">Setup a payment plan</h3>
+                            <i class="bi-emoji-smile icon-feature text-gradient d-block mb-3"></i>
+                            <h3 class="font-alt">Have a peaceful life again</h3>
                             <p class="text-muted mb-0">An affordable monthly payment to make the payment easy for you.</p>
                         </div>
                     </div>
@@ -184,10 +184,10 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-5">
                         <h2 class="display-4 lh-1 mb-4">Enter a new age of debt management</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">This section is perfect for featuring some information about your application, why it was built, the problem it solves, or anything else! There's plenty of space for text here, so don't worry about writing too much.</p>
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">After the onset of this digital age we're doing most of the work online. But we are now doing almost everything online. So, why not do your debt management online.</p>
                     </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0"><img class="img-fluid" src="https://media.istockphoto.com/photos/man-using-calculator-picture-id1309118129?b=1&k=20&m=1309118129&s=170667a&w=0&h=GpEJosOsm_-qFLxZ31YA3I8u4UuxaHccyEwWmcXKLbU=" height="900rem" width="900rem" alt="..." /></div>
+                        <div class="px-auto px-sm-0"><img class="img-fluid" src="https://media.istockphoto.com/photos/man-using-calculator-picture-id1309118129?b=1&k=20&m=1309118129&s=170667a&w=0&h=GpEJosOsm_-qFLxZ31YA3I8u4UuxaHccyEwWmcXKLbU=" height="900rem" width="900rem" alt="..." /></div>
                     </div>
                 </div>
             </div>
@@ -196,19 +196,20 @@
         <section class="cta">
             <div class="cta-content">
                 <div class="container px-5">
-                    <h2 class="text-white display-1 lh-1 mb-4">
+                    <h2 class="text-white display-1 lh-1">
                         Stop worrying.
-                        <br />
+                        <br>
                         Let's do it with experts.
                     </h2>
+                    <p class="text-white">Your tailor made solution is just a phone call away!</p>
                     <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="/#contact">Get a call</a>
                 </div>
             </div>
         </section>
         <!-- App badge section-->
         <section class="bg-gradient-primary-to-secondary" id="contact">
+            <h2 class="text-center text-white font-alt mb-4">Get a call now!</h2>
             <div class="col-lg-5 p-5 mx-auto bg-light">
-                <h2 class="text-center text-primary font-alt mb-4 text-gradient">Get a call now!</h2>
                 <form id="leadGen" method="post" data-netlify="true">
                     <!-- Name input-->
                     <div class="mb-3">
@@ -271,7 +272,7 @@
             <div class="container px-5">
                 <div class="row justify-content-lg-between">
                     <div class="col-lg-3 col-md-4">
-                        <p class="text-warning">BROWSE</p>
+                        <p class="text-white">BROWSE</p>
                         <ul class="list-unstyled">
                             <li class=""><a href="/#about" class="">About</a></li>
                             <li><a href="/faq.html">FAQ</a></li>
@@ -279,11 +280,11 @@
                         </ul>
                     </div>
                     <div class="col-lg-3 col-md-4">
-                        <p class="text-warning">ABOUT US</p>
+                        <p class="text-light">ABOUT US</p>
                         <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in colaboration with different companies and organisations.</p>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <p class="text-warning">CONTACT INFORMATION</p>
+                        <p class="text-white">CONTACT INFORMATION</p>
                         <br>
                         <p></p>
     
